<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcedfd"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.note.NoteActivity">

    <requestFocus />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noteTxtTitle"
        style="@style/Text.Title.H2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noteLblItensSelected"
        style="@style/Text.Title.H3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/subtitle_itens_selected"
        app:layout_constraintStart_toStartOf="@id/noteTxtTitle"
        app:layout_constraintTop_toBottomOf="@id/noteTxtTitle" />

    <br.com.jwk.samu.component.conditionview.ConditionView
        android:id="@+id/noteCvcondition11"
        style="@style/Condition"
        android:layout_marginStart="@dimen/vertical_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/condition_padding"
        android:layout_marginBottom="@dimen/condition_padding"
        app:layout_constraintEnd_toStartOf="@id/noteCvcondition12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteLblItensSelected" />

    <br.com.jwk.samu.component.conditionview.ConditionView
        android:id="@+id/noteCvcondition12"
        style="@style/Condition"
        android:layout_marginStart="@dimen/condition_padding"
        android:layout_marginEnd="@dimen/condition_padding"
        android:layout_marginBottom="@dimen/condition_padding"
        app:layout_constraintEnd_toStartOf="@id/noteCvcondition13"
        app:layout_constraintStart_toEndOf="@id/noteCvcondition11"
        app:layout_constraintTop_toTopOf="@id/noteCvcondition11" />

    <br.com.jwk.samu.component.conditionview.ConditionView
        android:id="@+id/noteCvcondition13"
        style="@style/Condition"
        android:layout_marginStart="@dimen/condition_padding"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/condition_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/noteCvcondition12"
        app:layout_constraintTop_toTopOf="@id/noteCvcondition11" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noteLblNote"
        style="@style/Text.Title.H3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/subtitle_itens_note"
        app:layout_constraintStart_toStartOf="@id/noteTxtTitle"
        app:layout_constraintTop_toBottomOf="@id/noteCvcondition11" />

    <EditText
        android:id="@+id/noteEdtNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_note"
        android:fontFamily="@font/app_font"
        android:gravity="top"
        android:lines="4"
        android:maxLines="4"
        android:textColor="#444444"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/noteTxtTitle"
        app:layout_constraintStart_toStartOf="@id/noteTxtTitle"
        app:layout_constraintTop_toBottomOf="@id/noteLblNote" />
    
    <br.com.jwk.samu.component.actionFloadDialog.ActionFloatDialog
        android:id="@+id/noteAfdAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:action_text="@string/action_create_ticket"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/noteTxtTitle"
        app:layout_constraintStart_toStartOf="@id/noteTxtTitle"
        app:layout_constraintTop_toBottomOf="@id/noteEdtNote" />

    <FrameLayout
        android:id="@+id/notePbLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@color/overlayColor">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>